--- a/landing_page.html
+++ b/landing_page.html
@@ -15,9 +15,9 @@
 	<script type="text/javascript" src="js/contact.js"></script>
 </head>
 
-<body class="d-flex align-items-center text-center justify-content-center" style="background-color: cornflowerblue; height: 100%;">
+<body class="landing-body">
 
-<div class="container backgroundContainer d-flex flex-column align-items-center">
+<div class="container backgroundContainer">
 	<div class="p-1 beveledBox mb-3" style="width: 100%; min-width: 60px;">
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container-fluid">
@@ -38,8 +38,8 @@
 
 	<!--Contacts-->
 	<div class="d-flex" style="justify-items: left; width: 100%; flex: 1 1 auto; overflow: auto;">
-		<div class="p-3 beveledBox d-flex flex-column" style="margin-right: 20px; min-width: 350px;">
-			<div class="d-flex" style="justify-content: space-between; align-items: center;">
+		<div class="p-3 beveledBox contact-list-display">
+			<div class="contact-header">
 				<h1 style="text-align: left">Contacts</h1>
 				<button data-bs-toggle="modal" data-bs-target="#newModal" type="button" class="btn btn-primary add-button">
 					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="padding: 0">
@@ -67,119 +67,14 @@
 			</ul>
 		</div>
 
-		<div class="p-3 beveledBox d-flex flex-column" id="notificationLanding" style="width: 100%; min-width: 350px; overflow: auto; flex: 1 1 auto">
+		<div class="p-3 beveledBox contact-display" id="notificationLanding">
 			<!-- New -->
 			<div class="d-flex" style="align-items: center">
 				<!-- New Modal -->
-				<div class="modal fade" id="newModal" data-bs-backdrop="static" tabindex="-1">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-
-							<!-- Modal Title -->
-							<div class="modal-header">
-								<h5 class="modal-title">New Contact</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-							</div>
-
-							<!-- Modal Body -->
-							<div class="modal-body">
-								<!--Info-->
-								<div class="info">
-									<form id="editForm" class="row g-3">
-										<div class="col-md-4">
-											<label for="new-first-name" class="form-label">First Name</label>
-											<input name="FirstName" type="name" class="form-control" id="new-first-name">
-										</div>
-										<div class="col-md-4">
-											<label for="new-last-name" class="form-label">Last Name</label>
-											<input name="LastName" type="name" class="form-control" id="new-last-name">
-										</div>
-										<div class="col-md-4">
-											<label for="new-phone-number" class="form-label">Phone Number</label>
-											<input name="PhoneNumber" type="phone-number" class="form-control" id="new-phone-number">
-										</div>
-										<div class="col-8">
-											<label for="new-address" class="form-label">Address</label>
-											<input name="Address" type="text" class="form-control" id="new-address" placeholder="1234 Main St">
-										</div>
-										<div class="col-md-4">
-											<label for="new-zip" class="form-label">Zip</label>
-											<input name="ZIP" type="text" class="form-control" id="new-zip">
-										</div>
-										<div class="col-md-8">
-											<label for="new-city" class="form-label">City</label>
-											<input name="City" type="text" class="form-control" id="new-city">
-										</div>
-										<div class="col-md-4">
-											<label for="new-state" class="form-label">State</label>
-											<select name="State" id="new-state" class="form-select">
-												<option selected>Choose...</option>
-												<option value="AL">Alabama</option>
-												<option value="AK">Alaska</option>
-												<option value="AZ">Arizona</option>
-												<option value="AR">Arkansas</option>
-												<option value="CA">California</option>
-												<option value="CO">Colorado</option>
-												<option value="CT">Connecticut</option>
-												<option value="DE">Delaware</option>
-												<option value="DC">District Of Columbia</option>
-												<option value="FL">Florida</option>
-												<option value="GA">Georgia</option>
-												<option value="HI">Hawaii</option>
-												<option value="ID">Idaho</option>
-												<option value="IL">Illinois</option>
-												<option value="IN">Indiana</option>
-												<option value="IA">Iowa</option>
-												<option value="KS">Kansas</option>
-												<option value="KY">Kentucky</option>
-												<option value="LA">Louisiana</option>
-												<option value="ME">Maine</option>
-												<option value="MD">Maryland</option>
-												<option value="MA">Massachusetts</option>
-												<option value="MI">Michigan</option>
-												<option value="MN">Minnesota</option>
-												<option value="MS">Mississippi</option>
-												<option value="MO">Missouri</option>
-												<option value="MT">Montana</option>
-												<option value="NE">Nebraska</option>
-												<option value="NV">Nevada</option>
-												<option value="NH">New Hampshire</option>
-												<option value="NJ">New Jersey</option>
-												<option value="NM">New Mexico</option>
-												<option value="NY">New York</option>
-												<option value="NC">North Carolina</option>
-												<option value="ND">North Dakota</option>
-												<option value="OH">Ohio</option>
-												<option value="OK">Oklahoma</option>
-												<option value="OR">Oregon</option>
-												<option value="PA">Pennsylvania</option>
-												<option value="RI">Rhode Island</option>
-												<option value="SC">South Carolina</option>
-												<option value="SD">South Dakota</option>
-												<option value="TN">Tennessee</option>
-												<option value="TX">Texas</option>
-												<option value="UT">Utah</option>
-												<option value="VT">Vermont</option>
-												<option value="VA">Virginia</option>
-												<option value="WA">Washington</option>
-												<option value="WV">West Virginia</option>
-												<option value="WI">Wisconsin</option>
-												<option value="WY">Wyoming</option>
-											</select>
-										</div>
-									</form>
-								</div>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-								<button id="create-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
-							</div>
-						</div>
-					</div>
-				</div>
+				<div id="new-modal-prop"></div>
 			</div>
 			<div>
-				<div class="d-flex align-items-center w-100" style="padding: 5px; justify-content: space-between;">
+				<div class="contact-info-header">
 					<h1>Contact Info</h1>
 					<div>
 						<button class="btn btn-primary rounded" data-bs-toggle="modal" data-bs-target="#editModal">
@@ -204,149 +99,22 @@
 			</div>
 
 			<!-- Data -->
-			<div style="display: flex; flex-direction: column; width: 100%; overflow: auto">
-				<div class="modal fade" id="editModal" data-bs-backdrop="static" tabindex="-1">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-
-							<!-- Modal Title -->
-							<div class="modal-header">
-								<h5 class="modal-title">Editing</h5>
-								<div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
-									<div class="align-self-center" style="width: 100%;">
-										<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
-									</div>
-								</div>
-								<h5 class="modal-title" id="edit-fullname"></h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-							</div>
-
-							<!-- Modal Body -->
-							<div class="modal-body">
-								<!--Info-->
-								<div class="info">
-									<form class="row g-3">
-										<div class="col-md-4">
-											<label for="edit-first-name" class="form-label">First Name</label>
-											<input type="name" class="form-control" id="edit-first-name">
-										</div>
-										<div class="col-md-4">
-											<label for="edit-last-name" class="form-label">Last Name</label>
-											<input type="name" class="form-control" id="edit-last-name">
-										</div>
-										<div class="col-md-4">
-											<label for="edit-phone-number" class="form-label">Phone Number</label>
-											<input type="phone-number" class="form-control" id="edit-phone-number">
-										</div>
-										<div class="col-8">
-											<label for="edit-address" class="form-label">Address</label>
-											<input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
-										</div>
-										<div class="col-md-4">
-											<label for="edit-zip" class="form-label">Zip</label>
-											<input type="text" class="form-control" id="edit-zip">
-										</div>
-										<div class="col-md-8">
-											<label for="edit-city" class="form-label">City</label>
-											<input type="text" class="form-control" id="edit-city">
-										</div>
-										<div class="col-md-4">
-											<label for="edit-state" class="form-label">State</label>
-											<select id="edit-state" class="form-select">
-												<option selected>Choose...</option>
-												<option value="AL">Alabama</option>
-												<option value="AK">Alaska</option>
-												<option value="AZ">Arizona</option>
-												<option value="AR">Arkansas</option>
-												<option value="CA">California</option>
-												<option value="CO">Colorado</option>
-												<option value="CT">Connecticut</option>
-												<option value="DE">Delaware</option>
-												<option value="DC">District Of Columbia</option>
-												<option value="FL">Florida</option>
-												<option value="GA">Georgia</option>
-												<option value="HI">Hawaii</option>
-												<option value="ID">Idaho</option>
-												<option value="IL">Illinois</option>
-												<option value="IN">Indiana</option>
-												<option value="IA">Iowa</option>
-												<option value="KS">Kansas</option>
-												<option value="KY">Kentucky</option>
-												<option value="LA">Louisiana</option>
-												<option value="ME">Maine</option>
-												<option value="MD">Maryland</option>
-												<option value="MA">Massachusetts</option>
-												<option value="MI">Michigan</option>
-												<option value="MN">Minnesota</option>
-												<option value="MS">Mississippi</option>
-												<option value="MO">Missouri</option>
-												<option value="MT">Montana</option>
-												<option value="NE">Nebraska</option>
-												<option value="NV">Nevada</option>
-												<option value="NH">New Hampshire</option>
-												<option value="NJ">New Jersey</option>
-												<option value="NM">New Mexico</option>
-												<option value="NY">New York</option>
-												<option value="NC">North Carolina</option>
-												<option value="ND">North Dakota</option>
-												<option value="OH">Ohio</option>
-												<option value="OK">Oklahoma</option>
-												<option value="OR">Oregon</option>
-												<option value="PA">Pennsylvania</option>
-												<option value="RI">Rhode Island</option>
-												<option value="SC">South Carolina</option>
-												<option value="SD">South Dakota</option>
-												<option value="TN">Tennessee</option>
-												<option value="TX">Texas</option>
-												<option value="UT">Utah</option>
-												<option value="VT">Vermont</option>
-												<option value="VA">Virginia</option>
-												<option value="WA">Washington</option>
-												<option value="WV">West Virginia</option>
-												<option value="WI">Wisconsin</option>
-												<option value="WY">Wyoming</option>
-											</select>
-										</div>
-									</form>
-								</div>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Delete -->
-				<!-- Delete Modal -->
-				<div class="modal fade" id="deleteModal" data-bs-backdrop="static" tabindex="-1">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-								<button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="contact-data">
+				<div id="edit-modal-prop"></div>
+				<div id="delete-modal-prop"></div>
 				<div class="profile-icon enlarged d-flex justify-content-center align-self-center">
 					<div class="align-self-center" style="width: 100%;">
 						<h3 class="profile-ab enlarged" id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
 					</div>
 				</div>
 				<h1 id="info-full-name">First Last</h1>
-				<div style="display: flex; flex-direction: column; align-items: center;">
-					<div id="info-pane" class="info" style="display: flex; flex-direction: column; width: 100%; max-width: 500px; overflow: auto">
+				<div class="info-pane">
+					<div id="info-pane" class="contact-info">
 						<div data-contact-key="PhoneNumber">
 							<label class="contact-field" for="info-phone-number">Phone Number</label>
 							<p class="contact-field" id="info-phone-number">No Contacts</p>
 							<hr>
 						</div>
-
 						<div data-contact-key="Address">
 							<label class="contact-field" for="info-address">Address</label>
 							<p class="contact-field" id="info-address">No Contacts</p>
