--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -18,32 +18,32 @@
             <div class="modal-body">
                 <!--Info-->
                 <div class="info">
-                    <form class="row g-3">
-                        <div class="col-md-4">
+                    <form id="edit-form" class="row g-3">
+                        <div class="col-md-4" data-contact-key="FirstName">
                             <label for="edit-first-name" class="form-label">First Name</label>
                             <input type="name" class="form-control" id="edit-first-name">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-contact-key="LastName">
                             <label for="edit-last-name" class="form-label">Last Name</label>
                             <input type="name" class="form-control" id="edit-last-name">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-contact-key="PhoneNumber">
                             <label for="edit-phone-number" class="form-label">Phone Number</label>
                             <input type="phone-number" class="form-control" id="edit-phone-number">
                         </div>
-                        <div class="col-8">
+                        <div class="col-8" data-contact-key="Address">
                             <label for="edit-address" class="form-label">Address</label>
-                            <input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
+                            <input  type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-contact-key="ZIP">
                             <label for="edit-zip" class="form-label">Zip</label>
                             <input type="text" class="form-control" id="edit-zip">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8" data-contact-key="City">
                             <label for="edit-city" class="form-label">City</label>
-                            <input type="text" class="form-control" id="edit-city">
+                            <input  type="text" class="form-control" id="edit-city">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-contact-key="State">
                             <label for="edit-state" class="form-label">State</label>
                             <select id="edit-state" class="form-select">
                                 <option selected>Choose...</option>
