--- a/modal/createModal.html
+++ b/modal/createModal.html
@@ -99,7 +99,7 @@
             </div>
             <div class="modal-footer spaced">
                 <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
-                <button id="create-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Save changes</button>
+                <button id="create-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Create</button>
             </div>
         </div>
     </div>
