--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -4,13 +4,7 @@
 
             <!-- Modal Title -->
             <div class="modal-header">
-                <h5 class="modal-title">Editing</h5>
-                <div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
-                    <div class="align-self-center" style="width: 100%;">
-                        <h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
-                    </div>
-                </div>
-                <h5 class="modal-title" id="edit-fullname"></h5>
+                <h5 class="modal-title">Edit Contact</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
 
@@ -21,31 +15,31 @@
                     <form id="edit-form" class="row g-3">
                         <div class="col-md-4" data-contact-key="FirstName">
                             <label for="edit-first-name" class="form-label">First Name</label>
-                            <input type="name" class="form-control" id="edit-first-name">
+                            <input name="FirstName" type="name" class="form-control" id="edit-first-name">
                         </div>
                         <div class="col-md-4" data-contact-key="LastName">
                             <label for="edit-last-name" class="form-label">Last Name</label>
-                            <input type="name" class="form-control" id="edit-last-name">
+                            <input name="LastName" type="name" class="form-control" id="edit-last-name">
                         </div>
                         <div class="col-md-4" data-contact-key="PhoneNumber">
                             <label for="edit-phone-number" class="form-label">Phone Number</label>
-                            <input type="phone-number" class="form-control" id="edit-phone-number">
+                            <input name="PhoneNumber" type="phone-number" class="form-control" id="edit-phone-number">
                         </div>
                         <div class="col-8" data-contact-key="Address">
                             <label for="edit-address" class="form-label">Address</label>
-                            <input  type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
+                            <input name="Address" type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
                         </div>
                         <div class="col-md-4" data-contact-key="ZIP">
                             <label for="edit-zip" class="form-label">Zip</label>
-                            <input type="text" class="form-control" id="edit-zip">
+                            <input name="ZIP" type="text" class="form-control" id="edit-zip">
                         </div>
                         <div class="col-md-8" data-contact-key="City">
                             <label for="edit-city" class="form-label">City</label>
-                            <input  type="text" class="form-control" id="edit-city">
+                            <input name="City" type="text" class="form-control" id="edit-city">
                         </div>
                         <div class="col-md-4" data-contact-key="State">
                             <label for="edit-state" class="form-label">State</label>
-                            <select id="edit-state" class="form-select">
+                            <select name="State" id="edit-state" class="form-select">
                                 <option selected>Choose...</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -104,8 +98,8 @@
                 </div>
             </div>
             <div class="modal-footer spaced">
-                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
+                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
+                <button id="edit-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Create</button>
             </div>
         </div>
     </div>
