--- a/modal/createModal.html
+++ b/modal/createModal.html
@@ -1,106 +1,113 @@
 <div class="modal fade" id="newModal" data-bs-backdrop="static" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-
-            <!-- Modal Title -->
-            <div class="modal-header">
-                <h5 class="modal-title">New Contact</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-
-            <!-- Modal Body -->
-            <div class="modal-body">
-                <!--Info-->
-                <div class="info">
-                    <form id="new-form" class="row g-3">
-                        <div class="col-md-4" data-contact-key="FirstName" data-contact-target="#new-first-name">
-                            <label for="new-first-name" class="form-label">First Name</label>
-                            <input name="FirstName" type="name" class="form-control" id="new-first-name">
-                        </div>
-                        <div class="col-md-4" data-contact-key="LastName" data-contact-target="#new-last-name">
-                            <label for="new-last-name" class="form-label">Last Name</label>
-                            <input name="LastName" type="name" class="form-control" id="new-last-name">
-                        </div>
-                        <div class="col-md-4" data-contact-key="PhoneNumber" data-contact-target="#new-phone-number">
-                            <label for="new-phone-number" class="form-label">Phone Number</label>
-                            <input name="PhoneNumber" type="phone-number" class="form-control" id="new-phone-number">
-                        </div>
-                        <div class="col-8" data-contact-key="Address" data-contact-target="#new-address">
-                            <label for="new-address" class="form-label">Address</label>
-                            <input name="Address" type="text" class="form-control" id="new-address">
-                        </div>
-                        <div class="col-md-4" data-contact-key="ZIP" data-contact-target="#new-zip">
-                            <label for="new-zip" class="form-label">Zip</label>
-                            <input name="ZIP" type="text" class="form-control" id="new-zip">
-                        </div>
-                        <div class="col-md-8" data-contact-key="City" data-contact-target="#new-city">
-                            <label for="new-city" class="form-label">City</label>
-                            <input name="City" type="text" class="form-control" id="new-city">
-                        </div>
-                        <div class="col-md-4" data-contact-key="State" data-contact-target="#new-state">
-                            <label for="new-state" class="form-label">State</label>
-                            <select name="State" id="new-state" class="form-select">
-                                <option selected>Choose...</option>
-                                <option value="AL">Alabama</option>
-                                <option value="AK">Alaska</option>
-                                <option value="AZ">Arizona</option>
-                                <option value="AR">Arkansas</option>
-                                <option value="CA">California</option>
-                                <option value="CO">Colorado</option>
-                                <option value="CT">Connecticut</option>
-                                <option value="DE">Delaware</option>
-                                <option value="DC">District Of Columbia</option>
-                                <option value="FL">Florida</option>
-                                <option value="GA">Georgia</option>
-                                <option value="HI">Hawaii</option>
-                                <option value="ID">Idaho</option>
-                                <option value="IL">Illinois</option>
-                                <option value="IN">Indiana</option>
-                                <option value="IA">Iowa</option>
-                                <option value="KS">Kansas</option>
-                                <option value="KY">Kentucky</option>
-                                <option value="LA">Louisiana</option>
-                                <option value="ME">Maine</option>
-                                <option value="MD">Maryland</option>
-                                <option value="MA">Massachusetts</option>
-                                <option value="MI">Michigan</option>
-                                <option value="MN">Minnesota</option>
-                                <option value="MS">Mississippi</option>
-                                <option value="MO">Missouri</option>
-                                <option value="MT">Montana</option>
-                                <option value="NE">Nebraska</option>
-                                <option value="NV">Nevada</option>
-                                <option value="NH">New Hampshire</option>
-                                <option value="NJ">New Jersey</option>
-                                <option value="NM">New Mexico</option>
-                                <option value="NY">New York</option>
-                                <option value="NC">North Carolina</option>
-                                <option value="ND">North Dakota</option>
-                                <option value="OH">Ohio</option>
-                                <option value="OK">Oklahoma</option>
-                                <option value="OR">Oregon</option>
-                                <option value="PA">Pennsylvania</option>
-                                <option value="RI">Rhode Island</option>
-                                <option value="SC">South Carolina</option>
-                                <option value="SD">South Dakota</option>
-                                <option value="TN">Tennessee</option>
-                                <option value="TX">Texas</option>
-                                <option value="UT">Utah</option>
-                                <option value="VT">Vermont</option>
-                                <option value="VA">Virginia</option>
-                                <option value="WA">Washington</option>
-                                <option value="WV">West Virginia</option>
-                                <option value="WI">Wisconsin</option>
-                                <option value="WY">Wyoming</option>
-                            </select>
-                        </div>
-                    </form>
+            <form id="new-form">
+                <!-- Modal Title -->
+                <div class="modal-header">
+                    <h5 class="modal-title">New Contact</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-            </div>
-            <div class="modal-footer spaced">
-                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
-                <button id="create-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Create</button>
-            </div>
+
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <!--Info-->
+                    <div class="info">
+                        <div class="row g-3">
+                            <div class="col-md-4" data-contact-key="FirstName" data-contact-target="#new-first-name">
+                                <label for="new-first-name" class="form-label">First Name</label>
+                                <input name="FirstName" type="name" class="form-control" id="new-first-name" required>
+                                <div class="invalid-feedback">
+                                    Required.
+                                </div>
+                            </div>
+                            <div class="col-md-4" data-contact-key="LastName" data-contact-target="#new-last-name">
+                                <label for="new-last-name" class="form-label">Last Name</label>
+                                <input name="LastName" type="name" class="form-control" id="new-last-name" required>
+                                <div class="invalid-feedback">
+                                    Required.
+                                </div>
+                            </div>
+                            <div class="col-md-4" data-contact-key="PhoneNumber" data-contact-target="#new-phone-number">
+                                <label for="new-phone-number" class="form-label">Phone Number</label>
+                                <input name="PhoneNumber" type="phone-number" class="form-control" id="new-phone-number">
+                            </div>
+                            <div class="col-8" data-contact-key="Address" data-contact-target="#new-address">
+                                <label for="new-address" class="form-label">Address</label>
+                                <input name="Address" type="text" class="form-control" id="new-address">
+                            </div>
+                            <div class="col-md-4" data-contact-key="ZIP" data-contact-target="#new-zip">
+                                <label for="new-zip" class="form-label">Zip</label>
+                                <input name="ZIP" type="text" class="form-control" id="new-zip">
+                            </div>
+                            <div class="col-md-8" data-contact-key="City" data-contact-target="#new-city">
+                                <label for="new-city" class="form-label">City</label>
+                                <input name="City" type="text" class="form-control" id="new-city">
+                            </div>
+                            <div class="col-md-4" data-contact-key="State" data-contact-target="#new-state">
+                                <label for="new-state" class="form-label">State</label>
+                                <select name="State" id="new-state" class="form-select">
+                                    <option selected>Choose...</option>
+                                    <option value="AL">Alabama</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="AZ">Arizona</option>
+                                    <option value="AR">Arkansas</option>
+                                    <option value="CA">California</option>
+                                    <option value="CO">Colorado</option>
+                                    <option value="CT">Connecticut</option>
+                                    <option value="DE">Delaware</option>
+                                    <option value="DC">District Of Columbia</option>
+                                    <option value="FL">Florida</option>
+                                    <option value="GA">Georgia</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="ID">Idaho</option>
+                                    <option value="IL">Illinois</option>
+                                    <option value="IN">Indiana</option>
+                                    <option value="IA">Iowa</option>
+                                    <option value="KS">Kansas</option>
+                                    <option value="KY">Kentucky</option>
+                                    <option value="LA">Louisiana</option>
+                                    <option value="ME">Maine</option>
+                                    <option value="MD">Maryland</option>
+                                    <option value="MA">Massachusetts</option>
+                                    <option value="MI">Michigan</option>
+                                    <option value="MN">Minnesota</option>
+                                    <option value="MS">Mississippi</option>
+                                    <option value="MO">Missouri</option>
+                                    <option value="MT">Montana</option>
+                                    <option value="NE">Nebraska</option>
+                                    <option value="NV">Nevada</option>
+                                    <option value="NH">New Hampshire</option>
+                                    <option value="NJ">New Jersey</option>
+                                    <option value="NM">New Mexico</option>
+                                    <option value="NY">New York</option>
+                                    <option value="NC">North Carolina</option>
+                                    <option value="ND">North Dakota</option>
+                                    <option value="OH">Ohio</option>
+                                    <option value="OK">Oklahoma</option>
+                                    <option value="OR">Oregon</option>
+                                    <option value="PA">Pennsylvania</option>
+                                    <option value="RI">Rhode Island</option>
+                                    <option value="SC">South Carolina</option>
+                                    <option value="SD">South Dakota</option>
+                                    <option value="TN">Tennessee</option>
+                                    <option value="TX">Texas</option>
+                                    <option value="UT">Utah</option>
+                                    <option value="VT">Vermont</option>
+                                    <option value="VA">Virginia</option>
+                                    <option value="WA">Washington</option>
+                                    <option value="WV">West Virginia</option>
+                                    <option value="WI">Wisconsin</option>
+                                    <option value="WY">Wyoming</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer spaced">
+                    <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
+                    <button id="create-btn" type="submit" class="btn btn-primary rounded compact">Create</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
