--- a/create_account.html
+++ b/create_account.html
@@ -34,16 +34,16 @@
 			<form class="form-floating loginForm" onsubmit="return doCreateAccount()">
 				<div class="d-flex">
 					<div class="form-floating mb-2">
-						<input required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" ">
+						<input required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 						<label for="first-name">First Name</label>
 					</div>
 					<div class="form-floating mb-2">
-						<input required class="form-control lastName" id="last-name" aria-describedby="emailHelp" placeholder=" ">
+						<input required class="form-control lastName" id="last-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 						<label for="last-name">Last Name</label>
 					</div>
 				</div>
 				<div class="form-floating mb-2">
-					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder=" ">
+					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 					<label for="user">Login</label>
 				</div>
 				<div class="form-floating mb-3">
