--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<h3 class="mb-3">Login</h3>
 			<form class="loginForm" onsubmit="return doLogin()">
 				<div class="form-group">
-					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder="Login" style="border-radius: 7px 7px 0 0; font-size: 18px; margin-bottom: -1px; position: relative;">
+					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder="Login" style="border-radius: 7px 7px 0 0; font-size: 18px; margin-bottom: -1px; position: relative;" maxlength="50">
 				</div>
 				<div class="form-group mb-3">
 					<input required type="password" class="form-control" id="pass" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px; position: relative">
